--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,21 @@
-version: 2
+version: 2.1
 
-restore_cache: &restore_cache
-  restore_cache:
-    keys:
-      - jars-{{ checksum "build.gradle" }}-{{ checksum  "lib/build.gradle" }}
-      - builds-{{ .Revision }}
-      - lib-builds-{{ .Revision }}
-jobs:
-  build:
-    working_directory: ~/color-hash.kt
+executors:
+  android:
     docker:
-      - image: circleci/android:api-29
+      - image: cimg/android:2024.11
     environment:
       JVM_OPTS: -Xmx3200m
+
+jobs:
+  build:
+    executor: android
     steps:
       - checkout
-      - *restore_cache
+      - restore_cache:
+          keys:
+            - v2-jars-{{ checksum "build.gradle" }}-{{ checksum "lib/build.gradle" }}
+            - v2-jars-
       - run:
           name: Download Dependencies
           command: ./gradlew dependencies
@@ -25,24 +25,15 @@ jobs:
       - save_cache:
           paths:
             - ~/.gradle
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "lib/build.gradle" }}
-      - save_cache:
-          paths:
-            - ~/color-hash.kt/build
-          key: builds-{{ .Revision }}
-      - save_cache:
-          paths:
-            - ~/color-hash.kt/app/build
-          key: lib-builds-{{ .Revision }}
+          key: v2-jars-{{ checksum "build.gradle" }}-{{ checksum "lib/build.gradle" }}
   test:
-    working_directory: ~/color-hash.kt
-    docker:
-      - image: circleci/android:api-29
-    environment:
-      JVM_OPTS: -Xmx3200m
+    executor: android
     steps:
       - checkout
-      - *restore_cache
+      - restore_cache:
+          keys:
+            - v2-jars-{{ checksum "build.gradle" }}-{{ checksum "lib/build.gradle" }}
+            - v2-jars-
       - run:
           name: Run Tests
           command: ./gradlew test
@@ -54,8 +45,9 @@ jobs:
           command: bash <(curl -s https://codecov.io/bash) -t c6baed7c-74c0-4042-8d37-dc0196b1374b
 
 workflows:
-  version: 2
   test-and-deploy:
     jobs:
       - build
-      - test: { requires: [build] }
+      - test:
+          requires:
+            - build
